Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberObjectField.quorum
class Main
    Object v
    number t = 5.0
    action Main
        Test(v)
    end

    action Test(number var)
    end
end
